[workspace]
resolver = "3"
members = [
    "crates/sandogasa-bodhi",
    "crates/sandogasa-bugzilla",
    "crates/sandogasa-config",
    "crates/sandogasa-distgit",
    "crates/sandogasa-nvd",
    "tools/fedora-cve-triage",
    "tools/sandogasa-pkg-acl",
]

# sandogasa (菅笠, a Japanese straw hat) is often associated with
# "slum" or post-apocalyptic robots in popular culture.

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/slopfest/fedora-cve-triage"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7"
sandogasa-bodhi = { version = "0.4.0", path = "crates/sandogasa-bodhi" }
sandogasa-bugzilla = { version = "0.4.0", path = "crates/sandogasa-bugzilla" }
sandogasa-config = { version = "0.4.0", path = "crates/sandogasa-config" }
sandogasa-distgit = { version = "0.4.0", path = "crates/sandogasa-distgit" }
sandogasa-nvd = { version = "0.4.0", path = "crates/sandogasa-nvd" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
version-compare = "0.2"
wiremock = "0.6"
