[workspace]
resolver = "3"
members = [
    "crates/sandogasa-bodhi",
    "crates/sandogasa-bugzilla",
    "crates/sandogasa-cli",
    "crates/sandogasa-config",
    "crates/sandogasa-depfilter",
    "crates/sandogasa-discourse",
    "crates/sandogasa-distgit",
    "crates/sandogasa-fasjson",
    "crates/sandogasa-fedrq",
    "crates/sandogasa-gitlab",
    "crates/sandogasa-koji",
    "crates/sandogasa-mailman",
    "crates/sandogasa-nvd",
    "crates/sandogasa-repology",
    "crates/sandogasa-rpmvercmp",
    "tools/ebranch",
    "tools/fedora-cve-triage",
    "tools/hs-intake",
    "tools/koji-diff",
    "tools/hs-relmon",
    "tools/sandogasa-hattrack",
    "tools/sandogasa-pkg-acl",
    "tools/sandogasa-report",
]

# sandogasa (菅笠, a Japanese straw hat) is often associated with
# "slum" or post-apocalyptic robots in popular culture.

[workspace.package]
version = "0.8.1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/slopfest/fedora-cve-triage"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
dirs = "6"
emojis = "0.8"
mockito = "1"
quick-xml = "0.37"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7"
sandogasa-bodhi = { version = "0.8", path = "crates/sandogasa-bodhi" }
sandogasa-bugzilla = { version = "0.8", path = "crates/sandogasa-bugzilla" }
sandogasa-cli = { version = "0.8", path = "crates/sandogasa-cli" }
sandogasa-config = { version = "0.8", path = "crates/sandogasa-config" }
sandogasa-depfilter = { version = "0.8", path = "crates/sandogasa-depfilter" }
sandogasa-discourse = { version = "0.8", path = "crates/sandogasa-discourse" }
sandogasa-distgit = { version = "0.8", path = "crates/sandogasa-distgit" }
sandogasa-fasjson = { version = "0.8", path = "crates/sandogasa-fasjson" }
sandogasa-fedrq = { version = "0.8", path = "crates/sandogasa-fedrq" }
sandogasa-gitlab = { version = "0.8", path = "crates/sandogasa-gitlab" }
sandogasa-koji = { version = "0.8", path = "crates/sandogasa-koji" }
sandogasa-mailman = { version = "0.8", path = "crates/sandogasa-mailman" }
sandogasa-nvd = { version = "0.8", path = "crates/sandogasa-nvd" }
sandogasa-repology = { version = "0.8", path = "crates/sandogasa-repology" }
sandogasa-rpmvercmp = { version = "0.8", path = "crates/sandogasa-rpmvercmp" }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
toml_edit = "0.22"
version-compare = "0.2"
wiremock = "0.6"
