[workspace]
resolver = "3"
members = [
    "crates/sandogasa-bodhi",
    "crates/sandogasa-bugclass",
    "crates/sandogasa-bugzilla",
    "crates/sandogasa-cli",
    "crates/sandogasa-config",
    "crates/sandogasa-depfilter",
    "crates/sandogasa-discourse",
    "crates/sandogasa-distgit",
    "crates/sandogasa-fasjson",
    "crates/sandogasa-fedrq",
    "crates/sandogasa-forgejo",
    "crates/sandogasa-github",
    "crates/sandogasa-gitlab",
    "crates/sandogasa-inventory",
    "crates/sandogasa-jira",
    "crates/sandogasa-koji",
    "crates/sandogasa-mailman",
    "crates/sandogasa-meetbot",
    "crates/sandogasa-nvd",
    "crates/sandogasa-repology",
    "crates/sandogasa-review",
    "crates/sandogasa-rpmvercmp",
    "crates/sandogasa-sourcehut",
    "tools/cpu-sig-tracker",
    "tools/dbranch",
    "tools/ebranch",
    "tools/fedora-cve-triage",
    "tools/fedora-review-digest",
    "tools/hs-intake",
    "tools/hs-meetings",
    "tools/koji-diff",
    "tools/hs-relmon",
    "tools/sandogasa-hattrack",
    "tools/poi-tracker",
    "tools/sandogasa-pkg-acl",
    "tools/sandogasa-pkg-health",
    "tools/sandogasa-report",
]

# sandogasa (菅笠, a Japanese straw hat) is often associated with
# "slum" or post-apocalyptic robots in popular culture.

[workspace.package]
version = "0.15.3"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/slopfest/sandogasa"

[workspace.dependencies]
anstream = "0.6"
anstyle = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
dirs = "6"
emojis = "0.8"
mockito = "1"
quick-xml = "0.41"
rayon = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "form", "json", "query", "rustls-no-provider", "http2"] }
rpassword = "7"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
schemars = { version = "1", features = ["chrono04"] }
sandogasa-bodhi = { version = "0.15", path = "crates/sandogasa-bodhi" }
sandogasa-bugclass = { version = "0.15", path = "crates/sandogasa-bugclass" }
sandogasa-bugzilla = { version = "0.15", path = "crates/sandogasa-bugzilla" }
sandogasa-cli = { version = "0.15", path = "crates/sandogasa-cli" }
sandogasa-config = { version = "0.15", path = "crates/sandogasa-config" }
sandogasa-depfilter = { version = "0.15", path = "crates/sandogasa-depfilter" }
sandogasa-discourse = { version = "0.15", path = "crates/sandogasa-discourse" }
sandogasa-distgit = { version = "0.15", path = "crates/sandogasa-distgit" }
sandogasa-fasjson = { version = "0.15", path = "crates/sandogasa-fasjson" }
sandogasa-fedrq = { version = "0.15", path = "crates/sandogasa-fedrq" }
sandogasa-forgejo = { version = "0.15", path = "crates/sandogasa-forgejo" }
sandogasa-github = { version = "0.15", path = "crates/sandogasa-github" }
sandogasa-gitlab = { version = "0.15", path = "crates/sandogasa-gitlab" }
sandogasa-inventory = { version = "0.15", path = "crates/sandogasa-inventory" }
sandogasa-jira = { version = "0.15", path = "crates/sandogasa-jira" }
sandogasa-koji = { version = "0.15", path = "crates/sandogasa-koji" }
sandogasa-mailman = { version = "0.15", path = "crates/sandogasa-mailman" }
sandogasa-meetbot = { version = "0.15", path = "crates/sandogasa-meetbot" }
sandogasa-nvd = { version = "0.15", path = "crates/sandogasa-nvd" }
sandogasa-repology = { version = "0.15", path = "crates/sandogasa-repology" }
sandogasa-review = { version = "0.15", path = "crates/sandogasa-review" }
sandogasa-rpmvercmp = { version = "0.15", path = "crates/sandogasa-rpmvercmp" }
sandogasa-sourcehut = { version = "0.15", path = "crates/sandogasa-sourcehut" }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
toml = "1"
toml_edit = "0.25"
url = "2"
version-compare = "0.2"
wiremock = "0.6"
