[package]
name = "sandogasa-bodhi"
description = "Bodhi API client for Fedora update queries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
sandogasa-cli = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
