[package]
name = "sandogasa-cli"
description = "Shared CLI utilities for sandogasa tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
rustls = { workspace = true }
sandogasa-config = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
