[package]
name = "sandogasa-config"
description = "Shared config file management and interactive prompting for sandogasa CLI tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dirs = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
