[package]
name = "sandogasa-fasjson"
description = "FASJSON (Fedora Account System) API client with Kerberos auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
