[package]
name = "sandogasa-mailman"
description = "HyperKitty (Mailman 3) archive API client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
