[package]
name = "sandogasa-nvd"
description = "NVD (National Vulnerability Database) API client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
