[package]
name = "sandogasa-repology"
description = "Rust client for the Repology package version tracking API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
sandogasa-rpmvercmp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
