[package]
name = "sandogasa-sourcehut"
description = "Sourcehut (sr.ht) GraphQL API client for user activity reporting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
sandogasa-cli = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
