[package]
name = "dbranch"
version.workspace = true
description = "Propagate a Debian package across its Ubuntu PPA and Debian branches"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anstream = { workspace = true }
anstyle = { workspace = true }
clap = { workspace = true }
sandogasa-cli = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
