[package]
name = "ebranch"
version.workspace = true
description = "Build dependency resolver — compute build order for cross-branch package porting"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
sandogasa-bodhi = { workspace = true }
sandogasa-cli = { workspace = true }
sandogasa-depfilter = { workspace = true }
sandogasa-fedrq = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
