[package]
name = "hs-intake"
version.workspace = true
description = "Hyperscale package intake tool — compare RPM package metadata between branches"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
sandogasa-fedrq = { workspace = true }
sandogasa-rpmvercmp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
