[package]
name = "hs-meetings"
description = "List and sync CentOS Hyperscale SIG meeting archives from meetbot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
sandogasa-cli = { workspace = true }
sandogasa-meetbot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
