# SPDX-License-Identifier: MPL-2.0

[package]
name = "hs-relmon"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
clap = { version = "4", features = ["derive"] }
