# SPDX-License-Identifier: MPL-2.0

[package]
name = "hs-relmon"
version.workspace = true
description = "Release monitoring tool for CentOS Hyperscale SIG packages"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
sandogasa-config = { workspace = true }
sandogasa-gitlab = { workspace = true }
sandogasa-repology = { workspace = true }
sandogasa-rpmvercmp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tempfile = { workspace = true }
